Completed layout of client side of request form. Need to make responsive and fix minor cosmetic details. Need to implement hidden scrollbar on Projects in Progress div.

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1,32 +1,10 @@
 html {box-sizing:border-box;}
 *, *::before, *::after {box-sizing:inherit;}
 
+/*         GENERAL STYLING            */
 body{
-    height: 100vh;
-    width: 100%;
-    background: linear-gradient(to bottom right, #1E953F, #00C0d1, #FFD200);
+  font-family: 'Open Sans', sans-serif;
+  height: 100vh;
+  width: 100%;
+  background: linear-gradient(to bottom right, #1E953F, #00C0d1, #FFD200);
  }
-
-.requestForm {
-  background: white;
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  height: 70%;
-  margin: auto;
-  padding: 40px;
-  width: 30%;
-}
-
-.requestForm .formInput {
-  margin-bottom: 10px;
-}
-
-#dueDate {
-  margin-top: 10px;
-}
-
-.checkboxInput {
-  margin: 10px 0;
-}
